# plugin-dev-helper

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  spec.md
agent/: __init__.py  assistant.py
app/: main.py
docs/rag/: 工具插件代码结构.md  工具插件说明.md  方案导出JSON.md
eval/: eval_results.json  run_eval.py  test_data.json
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/src/services/: chatService.ts
frontend/src/types/: chat.ts
knowledge_builder/: __init__.py  builder.py
prompts/: system.md
scripts/: run_pipeline.py  sync_rag_docs.py
sdk_parser/: __init__.py  models.py  parser.py
vector_store/: __init__.py  store.py
